[gd_scene load_steps=13 format=3 uid="uid://b2r6nh12wv41k"]

[ext_resource type="Script" path="res://Scripts/Mob.gd" id="1_ajqy0"]
[ext_resource type="Script" path="res://Scripts/StateMachine.gd" id="3_qfjv5"]
[ext_resource type="Script" path="res://Scripts/MobAttack.gd" id="4_fqxd2"]
[ext_resource type="Script" path="res://Scripts/MobIdle.gd" id="5_qf6ud"]
[ext_resource type="Script" path="res://Scripts/MobFollow.gd" id="6_va33k"]
[ext_resource type="Script" path="res://Scripts/Detection.gd" id="8_ugi6q"]
[ext_resource type="Texture2D" uid="uid://cy56wx4qynp3m" path="res://Textures/enemy.png" id="9_vd6sy"]
[ext_resource type="Shader" path="res://transparent_lighting.gdshader" id="10_qbt4f"]

[sub_resource type="SphereShape3D" id="SphereShape3D_uyii8"]
radius = 0.357674

[sub_resource type="BoxShape3D" id="BoxShape3D_kv6xp"]
size = Vector3(0.35, 0.35, 0.35)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vr552"]
render_priority = 0
shader = ExtResource("10_qbt4f")
shader_parameter/color = Color(1, 0.266667, 0.0509804, 1)
shader_parameter/energy = 1.0
shader_parameter/tex = ExtResource("9_vd6sy")

[sub_resource type="QuadMesh" id="QuadMesh_bbnvr"]
lightmap_size_hint = Vector2i(7, 7)
material = SubResource("ShaderMaterial_vr552")
size = Vector2(0.5, 0.5)
orientation = 1

[node name="Mob" type="CharacterBody3D" groups=["Enemies"]]
collision_layer = 2
collision_mask = 3
wall_min_slide_angle = 0.0
floor_constant_speed = true
script = ExtResource("1_ajqy0")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.5
target_desired_distance = 0.5
path_max_distance = 0.51
avoidance_enabled = true
debug_enabled = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_qfjv5")

[node name="MobAttack" type="Node3D" parent="StateMachine"]
script = ExtResource("4_fqxd2")

[node name="AttackCooldown" type="Timer" parent="StateMachine/MobAttack"]

[node name="MobIdle" type="Node3D" parent="StateMachine"]
script = ExtResource("5_qf6ud")

[node name="MovingCooldown" type="Timer" parent="StateMachine/MobIdle"]
wait_time = 4.0

[node name="MobFollow" type="Node3D" parent="StateMachine"]
script = ExtResource("6_va33k")

[node name="Timer" type="Timer" parent="StateMachine/MobFollow"]
wait_time = 0.2
autostart = true

[node name="Detection" type="Node3D" parent="."]
script = ExtResource("8_ugi6q")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0275174, 0)
visible = false
layers = 16
gi_mode = 0
pixel_size = 0.05
billboard = 1
shaded = true
double_sided = false
texture = ExtResource("9_vd6sy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
visible = false
shape = SubResource("SphereShape3D_uyii8")
disabled = true

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_kv6xp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.20019, 0)
layers = 16
cast_shadow = 0
gi_mode = 0
mesh = SubResource("QuadMesh_bbnvr")

[connection signal="timeout" from="StateMachine/MobAttack/AttackCooldown" to="StateMachine/MobAttack" method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="StateMachine/MobIdle/MovingCooldown" to="StateMachine/MobIdle" method="_on_moving_cooldown_timeout"]
[connection signal="timeout" from="StateMachine/MobFollow/Timer" to="StateMachine/MobFollow" method="_on_timer_timeout"]
[connection signal="player_spotted" from="Detection" to="StateMachine/MobAttack" method="_on_detection_player_spotted"]
[connection signal="player_spotted" from="Detection" to="StateMachine/MobIdle" method="_on_detection_player_spotted"]
[connection signal="player_spotted" from="Detection" to="StateMachine/MobFollow" method="_on_detection_player_spotted"]
